post preview mobile

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -248,4 +248,8 @@
 	font-family: @body-font;
 	color: #738a94 !important;
 	margin: 0 !important;
+
+	@media(max-width: @mobile-breakpoint) {
+		    font-size: .89em;
+	}
 }
