--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -64,7 +64,7 @@
 			font-family: @body-font;
 			margin: 2px 0;
 			@media(max-width: @mobile-breakpoint) {
-				font-size: 1.2em;
+				font-size: 1.1em;
 				line-height: 1.2em;
 				font-family: @bold-font;
 			}
@@ -82,7 +82,6 @@
 		.post-excerpt {
 			margin: 5px auto 0;
 			line-height: 1.2;
-			font-size: 1.15em;
 			font-family: @header-font;
 			transition: @transition;
 			color: @h1-color;
@@ -94,6 +93,7 @@
 				overflow: hidden;
 				display: -webkit-box;
 				text-overflow: ellipsis;
+				font-size: .9em;
 			}
 		}
 	}
@@ -102,10 +102,10 @@
 		display: block;
 		margin: 15px 0;
 		@media(max-width: @mobile-breakpoint) {
-			margin: 0 20px 0 0;
+			margin: 0 10px 0 0;
 			order: 0;
-			min-width: 110px;
-			width: 110px;
+			min-width: 80px;
+			width: 80px;
 			display: block;
 			overflow: hidden;
 		}
