--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -4,10 +4,7 @@
 	.cover {
 		border-bottom: 1px solid #eaedf1;
 		@media(max-width: @mobile-breakpoint){
-			margin-left: calc(~"-50vw + 50%") !important;
-			margin-right: calc(~"-50vw + 50%") !important;
-			width: 110%;
-			margin-top: -21px;
+			margin-top: -41px;
     	margin-bottom: 30px;
 		}
 		.avatar {
@@ -15,6 +12,7 @@
 			width: 85px;
 			height: 85px;
 			float: none;
+			border-radius: 50%;
 		}
 
 		h3 {
@@ -48,7 +46,7 @@
 			margin: 0 auto;
 
 			@media(max-width: @mobile-breakpoint) {
-			  margin: 0 auto 2px;
+			  margin: 0 auto 4px;
 			}
 		}
 	}
