--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -20,7 +20,7 @@ nav {
 			max-width: 93%;
 		}
 		@media(max-width: 800px) {
-			max-width: 90%;
+			max-width: 86%;
 		}
 
 		.left-nav {
@@ -28,88 +28,95 @@ nav {
 			justify-content: left;
 			width: 500px;
 			align-items: center;
+			@media(max-width: @mobile-breakpoint) {
+				    justify-content: inherit;
+			}
 
-		.logo {
-			height: 30px;
-			transition: all 0.2s ease-out;
-			margin-right: 40px;
-
-			img {
+			.logo {
 				height: 30px;
-			}
-
-			&:hover {
-				opacity: 0.7;
-				cursor: pointer;
-			}
-		}
-
-		.dropdown {
-			color: #626573;
-			border: none;
-			font-family: 'TTNormsPro-Regular', sans-serif !important;
-			font-weight: 100;
-			font-size: 1em;
-			padding: 0;
-			background: none;
-			height: 60px;
-			margin-right: 30px;
-			outline: none;
-			transition: @transition;
-
-			&:hover {
-				color: @theme-color;
-			}
-
-			&.posts {
-				@media(max-width: @mobile-breakpoint) {
-					display: none;
-				}
-			}
-
-			.dropdown-content {
-				display: none;
-				background: white;
-				box-shadow: 0 3px 3px rgba(65, 67, 144, 0.15);
-				z-index: 10;
-				width: 200px;
-				position: absolute;
-				opacity: 0;
-				padding: 5px;
-				top: 57px;
 				transition: all 0.2s ease-out;
-				margin-left: -70px;
-				transition: @transition;
+				margin-right: 40px;
 
-				a {
-					display: block;
-					font-size: 0.8em;
-					padding: 10px;
-					text-align: left;
-					line-height: 1.5;
-					color: #373940;
-					transition: all 0.2s ease-out;
-					font-family: 'TTNormsPro-Regular', sans-serif;
-					font-weight: 100;
-					transition: @transition;
+				img {
+					height: 30px;
+				}
 
-					&:hover {
-						background: @theme-color;
-						color: white;
-					}
+				&:hover {
+					opacity: 0.7;
+					cursor: pointer;
 				}
 			}
 
-			&:hover {
-				.dropdown-content {
-					display: block;
-					opacity: 1;
-					@media(max-width: 600px) {
+			.dropdown {
+				color: #626573;
+				border: none;
+				font-family: 'TTNormsPro-Regular', sans-serif !important;
+				font-weight: 100;
+				font-size: 1em;
+				padding: 0;
+				background: none;
+				height: 60px;
+				margin-right: 30px;
+				outline: none;
+				transition: @transition;
+				@media(max-width: @mobile-breakpoint) {
+					margin-right: 0px;
+					font-size: .9em;
+				}
+
+				&:hover {
+					color: @theme-color;
+				}
+
+				&.pages {
+					@media(max-width: @mobile-breakpoint) {
 						display: none;
 					}
 				}
+
+				.dropdown-content {
+					display: none;
+					background: white;
+					box-shadow: 0 3px 3px rgba(65, 67, 144, 0.15);
+					z-index: 10;
+					width: 200px;
+					position: absolute;
+					opacity: 0;
+					padding: 5px;
+					top: 57px;
+					transition: all 0.2s ease-out;
+					margin-left: -70px;
+					transition: @transition;
+
+					a {
+						display: block;
+						font-size: 0.8em;
+						padding: 10px;
+						text-align: left;
+						line-height: 1.5;
+						color: #373940;
+						transition: all 0.2s ease-out;
+						font-family: 'TTNormsPro-Regular', sans-serif;
+						font-weight: 100;
+						transition: @transition;
+
+						&:hover {
+							background: @theme-color;
+							color: white;
+						}
+					}
+				}
+
+				&:hover {
+					.dropdown-content {
+						display: block;
+						opacity: 1;
+						@media(max-width: 600px) {
+							display: none;
+						}
+					}
+				}
 			}
 		}
-	}
 	}
 }
