twitter widget fix

--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -1,6 +1,6 @@
 <!-- Start Twitter Widget -->
 <div class="widget twitter">
   <h4 class="title">Twitter</h4>
-  <iframe src="https://feed.mikle.com/widget/v2/105905/" height="782px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+  <a class="twitter-timeline" data-link-color="#5eb9d7" href="https://twitter.com/HackersSlackers?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders noscrollbar transparent">Tweets by HackersSlackers</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 <!-- End Twitter Widget -->
