--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -11,14 +11,7 @@
     @media (max-width: 800px) {
       width: 100%;
       margin: 20px auto;
-      padding: 0;
-    }
-  }
-
-  .main-content {
-    @media (max-width: 800px) {
-      width: 90%;
-      margin: auto;
+      grid-gap: 20px;
     }
   }
 
@@ -98,7 +91,6 @@
     width: -webkit-fill-available;
     width: -moz-available;
     height: 26px;
-    margin-bottom: 20px;
     background: #ffffff;
     padding: 12px;
     align-items: center;
