--- a/partials/author/widget-authortwitter.hbs
+++ b/partials/author/widget-authortwitter.hbs
@@ -1,5 +1,9 @@
 <!-- Start Twitter Widget -->
-<div class="widget twitter">
-  <h4 class="title">Twitter</h4>
-</div>
+{{#if twitter}}
+  <div class="widget twitter">
+    <h4 class="title">Twitter</h4>
+    <a class="twitter-timeline" data-link-color="#5eb9d7" href="https://twitter.com/{{twitter}}?ref_src=twsrc%5Etfw" data-chrome="noheader nofooter noborders noscrollbar transparent">Tweets by HackersSlackers</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+{{/if}}
 <!-- End Twitter Widget -->
