--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -151,8 +151,6 @@
 	}
 
 	.social-btns {
-		display: flex;
-		justify-content: space-between;
 		width: 100%;
 		margin-bottom: 18px;
 
@@ -161,10 +159,8 @@
 		}
 
 		i {
-			font-size: 20px;
-			@media(max-width: @mobile-breakpoint) {
-				font-size: 25px;
-			}
+			font-size: 16px;
+			margin-right: 20px;
 
 			.btn:hover {
 				&.facebook {
