--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -56,6 +56,7 @@
       .related-post-title {
         font-family: @bold-font;
         height: 60px;
+        font-size: 1.1em;
         overflow: hidden;
         line-height: 1.2;
         display: -webkit-box;
