removed post wrapper

--- a/src/less/global/widgets/newsletter-widget.less
+++ b/src/less/global/widgets/newsletter-widget.less
@@ -21,6 +21,7 @@
       border: 1px solid #d5dbe6;
       transition: all 0.3s all;
       margin-bottom: 10px;
+      border-radius: 3px;
 
       &::placeholder {
         opacity: 1;
@@ -113,6 +114,7 @@
       outline: none;
       transition: all 0.3s ease-in-out;
       margin-top: 3px;
+      border-radius: 3px;
 
       span {
         font-size: 14px;
