--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -33,12 +33,6 @@
       outline-offset: 0.4em;
     }
 
-    .cdata,
-    .doctype,
-    .prolog {
-      color: #535f53;
-    }
-
     .comment {
       color: #68aeb6;
       opacity: 0.6;
@@ -67,11 +61,14 @@
 
     .number,
     .operator {
-      color: #f7f23f;
+      color: #b53bd6;
     }
 
     .tag {
-      color: #daf7fd;
+      .name {
+        color: #517757;
+      }
+
 
       .name {
         color: #6dbfec;
@@ -102,11 +99,11 @@
     }
 
     .params {
-      color: #cc995f;
+      color: #de8a2b;
     }
 
     .keyword {
-      color: #b53bd6;
+      color: #3b7cd6;
       font-family: 'dm', sans-serif;
     }
 
