--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -35,9 +35,9 @@
       color: #56b6c2;
     }
 
-    .addition,
-    .regexp {
-      color: #c39dea !important;
+    .number,
+    .operator {
+      color: #b53bd6;
     }
 
     .emphasis {
