--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -134,11 +134,8 @@ input:hover {
 	color: white;
 }
 
-input[type="search"],
-input[type="text"],
-input[type="url"],
-input[type="email"],
-input[type="password"] textarea {
+input,
+textarea {
 	padding: 7px;
 	.transition(all 0.2s);
 	font-family: 'TTNormsPro-Regular', sans-serif;
