--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -275,3 +275,11 @@
       background-color: #efb13c !important;
     }
   }
+
+  .raspberrypi {
+    background-color: #c21c4a;
+
+    * {
+      background-color: #c21c4a !important;
+    }
+  }
