--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -30,7 +30,7 @@
 		overflow: hidden;
 		@media(max-width: @tablet-breakpoint) {
 			margin-top: 0;
-		  padding: 60px 0;
+		  padding: 40px;
 			width: auto;
 		}
 		@media(max-width: @mobile-breakpoint) {
@@ -42,6 +42,9 @@
 	.post-header {
 		margin: 0 0 60px;
 		text-align: center;
+		@media(max-width: @tablet-breakpoint) {
+			margin-bottom: 40px;
+		}
 		@media(max-width: @mobile-breakpoint) {
 			padding: 0;
 			margin: 0 0 30px;
