--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -212,6 +212,8 @@
       border: 1px solid #dadada;
       transition: all 0.3s ease-out;
       grid-template-rows: 291px;
+      border-radius: 5px;
+      overflow: hidden;
 
       .tag-title {
         margin: 0;
