added constrint to tag styles

--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -19,7 +19,8 @@
   margin-right: 5px;
 }
 
-  .nodejs {
+.tags {
+  &.nodejs {
     background-color: #598708 !important;
 
     * {
@@ -27,7 +28,7 @@
     }
   }
 
-  .aws {
+  &.aws {
     background-color: #c37a32 !important;
 
     * {
@@ -35,7 +36,7 @@
     }
   }
 
-  .django {
+  &.django {
     background-color: #43b78b !important;
 
     * {
@@ -43,7 +44,7 @@
     }
   }
 
-  .nosql {
+  &.nosql {
     background-color: #6eb14a !important;
 
     * {
@@ -51,7 +52,7 @@
     }
   }
 
-  .sql {
+  &.sql {
     background-color: #687ea5 !important;
 
     * {
@@ -59,7 +60,7 @@
     }
   }
 
-  .restapis {
+  &.restapis {
     background-color: #a93e3e !important;
 
     * {
@@ -67,7 +68,7 @@
     }
   }
 
-  .frontend {
+  &.frontend {
     background-color: #d7ac0a !important;
 
     * {
@@ -75,7 +76,7 @@
     }
   }
 
-  .data {
+  &.data {
     background-color: #1cccae !important;
 
     * {
@@ -83,7 +84,7 @@
     }
   }
 
-  .roundup {
+  &.roundup {
     background-color: #666fa5 !important;
 
     * {
@@ -91,7 +92,7 @@
     }
   }
 
-  .excel {
+  &.excel {
     background-color: #5bb85b;
 
     * {
@@ -99,7 +100,7 @@
     }
   }
 
-  .devops {
+  &.devops {
     background-color: #495f6d !important;
 
     * {
@@ -107,7 +108,7 @@
     }
   }
 
-  .pandas {
+  &.pandas {
     background-color: #e976c4 !important;
 
     * {
@@ -115,7 +116,7 @@
     }
   }
 
-  .googlecloud {
+  &.googlecloud {
     background-color: #1990f5 !important;
 
     * {
@@ -131,7 +132,7 @@
     }
   }
 
-  .datascience {
+  &.datascience {
     background-color: #449a8c !important;
 
     * {
@@ -139,7 +140,7 @@
     }
   }
 
-  .tableau {
+  &.tableau {
     background-color: #ec9605 !important;
 
     * {
@@ -147,7 +148,7 @@
     }
   }
 
-  .python {
+  &.python {
     background-color: #16b9e7 !important;
 
     * {
@@ -155,7 +156,7 @@
     }
   }
 
-  .flask {
+  &.flask {
     background-color: #505d7f !important;
 
     * {
@@ -163,7 +164,7 @@
     }
   }
 
-  .statistics {
+  &.statistics {
     background-color: #34b27a !important;
 
     * {
@@ -171,7 +172,7 @@
     }
   }
 
-  .expressjs {
+  &.expressjs {
     background-color: grey !important;
 
     * {
@@ -179,7 +180,7 @@
     }
   }
 
-  .atlassian {
+  &.atlassian {
     background-color: #36408c !important;
 
     * {
@@ -187,7 +188,7 @@
     }
   }
 
-  .dataengineering {
+  &.dataengineering {
     background-color: #4c5777 !important;
 
     * {
@@ -195,7 +196,7 @@
     }
   }
 
-  .codesnippetcorner {
+  &.codesnippetcorner {
     background-color: #747d9a !important;
 
     * {
@@ -211,7 +212,7 @@
     }
   }
 
-  .saas {
+  &.saas {
     background-color: #3d5075 !important;
 
     * {
@@ -219,15 +220,15 @@
     }
   }
 
-  .datavis {
-    background-color: #5a8a8a !important;
+  &.datavis {
+    background-color: #73bfcc !important;
 
     * {
-      background-color: #5a8a8a !important;
+      background-color: #73bfcc !important;
     }
   }
 
-  .plotly {
+  &.plotly {
     background-color: #155a8b;
 
     * {
@@ -235,7 +236,7 @@
     }
   }
 
-  .postgresql {
+  &.postgresql {
     background-color: #425167;
 
     * {
@@ -243,7 +244,7 @@
     }
   }
 
-  .bigdata {
+  &.bigdata {
     background-color: #12b3a3;
 
     * {
@@ -251,7 +252,7 @@
     }
   }
 
-  .graphql {
+  &.graphql {
     background-color: #bc6391;
 
     * {
@@ -260,15 +261,15 @@
     }
   }
 
-  .apache {
-    background-color:#d5212a;
+  &.apache {
+    background-color: #d5212a;
 
     * {
-      background-color:#d5212a !important;
+      background-color: #d5212a !important;
     }
   }
 
-  .spark {
+  &.spark {
     background-color: #efb13c;
 
     * {
@@ -276,10 +277,11 @@
     }
   }
 
-  .raspberrypi {
+  &.raspberrypi {
     background-color: #c21c4a;
 
     * {
       background-color: #c21c4a !important;
     }
   }
+}
