read link margin & size

--- a/partials/nav/header.hbs
+++ b/partials/nav/header.hbs
@@ -17,6 +17,10 @@
         </div>
       </div>
 
+      <div class="dropdown about">
+        <a href="{{@site.url}}/about/"><button class="dropdown">About</button></a>
+      </div>
+
       <div class="dropdown pages">
         <button class="dropdown">Pages</button>
         <div class="dropdown-content">
