--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -73,6 +73,13 @@ nav {
 					}
 				}
 
+				&.about {
+					display: none;
+					@media(max-width: @mobile-breakpoint) {
+						display: inline-block;
+					}
+				}
+
 				.dropdown-content {
 					display: none;
 					background: white;
