--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -175,9 +175,8 @@
 	}
 
 	.read-link {
-		margin: 20px 0;
+		margin: 10px 0 30px;
 		display: block;
-		font-size: 1.1em;
 		@media(max-width:600px) {
 			display: none;
 		}
