--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -117,6 +117,10 @@
 					}
 				}
 
+				&:hover i {
+					color: white;
+				}
+
 				&.facebook {
 					&:hover {
 						background-color: lighten(@facebook-color, 15%);
