--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -36,6 +36,8 @@
     overflow: hidden;
     @media(max-width: @mobile-breakpoint) {
       max-height: 312px;
+      margin-left: calc(-50vw + 50%) !important;
+      margin-right: calc(-50vw + 50%) !important;
     }
   }
 
@@ -73,8 +75,6 @@
     @media(max-width: @mobile-breakpoint) {
       width: 100%;
       height: 360px;
-      margin: -12px 0 0 !important;
-      top: -7px;
     }
     @media(max-width: 470px) {
       height: 250px !important;
