--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -130,7 +130,7 @@ table {
             display: table-row;
             margin-left: 5px;
             padding: 0;
-            line-height: 4.55;
+            line-height: 4.8;
             font-family: @body-font;
             letter-spacing: 0.5px;
             text-align: left;
@@ -192,7 +192,7 @@ table {
             text-overflow: ellipsis;
             width: -moz-available;
             min-width: -webkit-fill-available;
-            border-bottom: 1px solid #ced3db;
+            border-bottom: 1px solid #e7ebf2;
             margin: 5px 0;
             font-size: 0.78em !important;
             font-weight: 300;
