--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -161,6 +161,10 @@
 		i {
 			font-size: 16px;
 			margin-right: 20px;
+			@media(max-width: @mobile-breakpoint) {
+				font-size: 20px;
+				margin-right: 24px;
+			}
 
 			.btn:hover {
 				&.facebook {
