--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -53,10 +53,10 @@
 
 	.post-image {
 		line-height: 1;
-		margin: 0;
 		height: auto;
 		overflow: hidden;
 		max-height: 453px;
+		margin: 0 0 20px;
 		@media(max-width: @tablet-breakpoint) {
 			height: unset;
 			max-height: 356px;
