--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -56,7 +56,8 @@
 		height: auto;
 		overflow: hidden;
 		max-height: 453px;
-		margin: 0 0 20px;
+		margin: 0;
+	  border-radius: 3px;
 		@media(max-width: @tablet-breakpoint) {
 			height: unset;
 			max-height: 356px;
