package lock update

--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -272,7 +272,7 @@
       .column-title {
         margin-top: 0 !important;
         font-size: 1.38em;
-        margin: 0 auto 10px !important;
+        margin: 5px auto 20px !important;
         padding-bottom: 0;
         position: relative;
         width: 89%;
