related post title min-height

--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -65,6 +65,7 @@
         width: -webkit-fill-available;
         margin: 0;
         color: @grey-header;
+        min-height: 35px;
       }
     }
   }
