--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -29,7 +29,7 @@
 											</picture>
 										{{/if}}
 										<div class="description">
-											<h2>{{meta_title}}</h2>
+											<h2>{{title}}</h2>
 											<p>{{description}}</p>
 											<span class="postcount">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>
 										</div>
