global styles force load

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,8 +1,7 @@
 <!-- Start Scripts -->
-<script src="{{asset "js/critical.js"}}"></script>
 <script src="{{asset "js/includes/retina.min.js"}}"></script>
 <script src="{{asset "js/includes/ghost-search.min.js"}}"></script>
-<script async src="{{asset "js/global.js"}}"></script>
+<script src="{{asset "js/global.js"}}"></script>
 <script src="https://kit.fontawesome.com/dfcb2a8218.js"></script>
 {{^is "post,home"}}
   <script async src="{{asset "js/pages.js"}}"></script>
