--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,3 +1,15 @@
+/* Critical Styles */
+@import './global/variables.less';
+@import './global/mixin.less';
+@import './global/global.less';
+@import './global/footer.less';
+@import './global/fonts.less';
+@import './global/nav.less';
+@import './global/layout.less';
+@import './global/postlist.less';
+@import './global/postpreview.less';
+@import './global/widgets.less';
+
 /* Global Styles */
 @import './global/pagination.less';
 @import './global/tags.less';
