--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -13,6 +13,7 @@
 	@media(max-width: @tablet-breakpoint) {
 		margin: 0 auto 20px;
 		padding: 40px 0;
+		border-radius: 0;
 	}
 	@media(max-width: @mobile-breakpoint) {
 		margin-left: 0 !important;
