--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -3,7 +3,7 @@
   padding: 0;
   display: none;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   padding-bottom: 20px;
   border-bottom: 1px solid #e0ebee;
   margin-top: 10px;
@@ -62,7 +62,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         max-width: 100%;
-        overflow: hidden;
+        overflow-x: hidden;
       }
 
       * {
