author widgets & post preview redo

--- a/partials/author/widget-authorwebsite.hbs
+++ b/partials/author/widget-authorwebsite.hbs
@@ -2,7 +2,7 @@
 {{#if "website"}}
   <div class="widget website">
     <h4 class="title">Website</h4>
-    <a class="previewimage" href="{{website}}">{{website}}</a>
+    <a class="website-link" href="{{website}}">{{website}}</a>
   </div>
 {{/if}}
 <!-- End Website Widget -->
