--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -7,6 +7,10 @@
 			margin-top: -41px;
     	margin-bottom: 30px;
 		}
+
+		.author-name {
+			text-transform: uppercase;
+		}
 		.avatar {
 			margin: 0 !important;
 			width: 85px;
@@ -60,7 +64,7 @@
 
 		&.github,
 		&.medium,
-		&.website {
+		&.meetup {
 			display: none;
 		}
 	}
