--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -135,11 +135,7 @@
 
 
 
-      .post-preview-side {
-        display: none;
-      }
-
-      .date {
+      .post-footer {
         display: none;
       }
     }
