--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,29 +1,43 @@
 <!-- Start Post Preview -->
 <article class="post-preview {{#primary_author}}{{slug}}{{/primary_author}}">
 
-  <div class="post-preview-side">
-    {{#primary_tag}}
-      <span class="primary-tag {{slug}}">
-        {{name}}
-      </span>
-    {{/primary_tag}}
-  </div>
-
 
   <div class="post-preview-body">
-    <div class="post-head">
-      <span class="date">{{date published_at format="DD MMM YYYY"}}</span>
-      <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
-      <span class="post-excerpt">{{excerpt words="60"}}</span>
-    </div>
 
     {{#if feature_image}}
       <a href="{{url}}" class="post-image">
         <img class="featured-image lazyload" alt="{{title}}" loading="lazy" src="{{img_url feature_image}}" data-rjs="2">
       </a>
     {{/if}}
+    <div class="post-head">
+      <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
+      <span class="post-excerpt">{{excerpt words="60"}}</span>
+    </div>
+    {{^has tag="Roundup"}}
     <div class="preview-content">{{content words=100}}</div>
-    <a href="{{url}}" class="read-link">{{t "Continue Reading"}} <i class="far fa-arrow-right"></i></a>
+    {{/has}}
+    <div class="post-footer">
+      {{#primary_tag}}
+      <div class="meta-item">
+        <span class="primary-tag {{slug}}">
+          <a href="{{url}}">{{name}}</a>
+        </span>
+      </div>
+      {{/primary_tag}}
+
+      <div class="meta-item date">
+        <i class="fal fa-calendar"></i> <span>{{date published_at format="DD MMMM"}}</span>
+      </div>
+      {{#primary_author}}
+        <div class="meta-item author">
+          <a href="{{url}}"><i class="far fa-user"></i> <span>{{name}}</span></a>
+        </div>
+      {{/primary_author}}
+      <div class="meta-item readtime">
+        <i class="far fa-eye"></i> <span>{{reading_time}}</span>
+      </div>
+
+    </div>
   </div>
 
 </article>
