--- a/src/less/etc/post-archive.less
+++ b/src/less/etc/post-archive.less
@@ -4,7 +4,7 @@
   .postlist {
     width: 100%;
     display: grid;
-    grid-gap: 15px;
+    grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr;
     margin: 20px auto 30px;
     @media(max-width: @tablet-breakpoint) {
@@ -60,15 +60,8 @@
         }
       }
 
-      .content {
-        padding: 0 15px 15px;
-      }
 
-      .btn {
-        padding: 12px 18px;
-      }
-
-      .author,
+      .readtime,
       .date {
         display: none !important;
       }
