post head mobile

--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -12,8 +12,10 @@
       padding: 0;
       max-width: none;
       width: auto;
-      margin: 5px 0 15px;
+      margin: 0 0 20px;
       justify-content: space-between;
+      order: 2;
+      justify-content: left;
     }
 
     i {
@@ -71,7 +73,7 @@
     text-transform: capitalize;
     line-height: 1;
     @media(max-width: @mobile-breakpoint) {
-      margin: 0 !important;
+      margin: 0 20px 0 0 !important;
     }
 
     * {
@@ -104,7 +106,7 @@
     }
 
     i {
-      margin-right: 10px;
+      margin-right: 8px;
     }
 
     &.readtime {
