--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -34,8 +34,16 @@
 			width: auto;
 		}
 		@media(max-width: @mobile-breakpoint) {
-			padding: 30px;
+			padding: 0 30px 30px;
 			margin: 0 0 40px;
+			border-radius: 0;
+		}
+	}
+
+	.post-head {
+		@media(max-width: @mobile-breakpoint) {
+			display: flex;
+			flex-direction: column;
 		}
 	}
 
@@ -46,8 +54,10 @@
 			margin-bottom: 40px;
 		}
 		@media(max-width: @mobile-breakpoint) {
+			text-align: left;
 			padding: 0;
-			margin: 0 0 30px;
+			margin: 30px 0;
+			order: 1;
 		}
 	}
 
@@ -63,10 +73,9 @@
 			max-height: 356px;
 		}
 		@media (max-width: 600px) {
-			max-height: 286px;
-		}
-		@media (max-width: 400px) {
-			max-height: 180px;
+			margin-left: calc(-50vw + 50%) !important;
+    	margin-right: calc(-50vw + 50%) !important;
+			order: 0;
 		}
 
 		img {
@@ -74,6 +83,10 @@
 			line-height: 1;
 			height: auto;
 			border: 1px solid #e2e7ee;
+
+			@media(max-width: @mobile-breakpoint) {
+				border: 0;
+			}
 		}
 	}
 
@@ -107,9 +120,6 @@
 		@media(max-width: @tablet-breakpoint) {
 			margin: 0;
 			font-size: 1.1em;
-		}
-		@media(max-width: @mobile-breakpoint) {
-			font-size: 1em;
 		}
 	}
 
@@ -522,25 +532,6 @@
 				}
 				@media(max-width: @mobile-breakpoint) {
 					margin: 20px auto;
-				}
-			}
-		}
-
-		.post-head {
-			line-height: 1;
-			text-align: left;
-
-			img {
-				height: 14px;
-				width: 14px;
-			}
-
-			span {
-				margin: 0;
-				white-space: nowrap;
-
-				&:last-child {
-					margin: 0;
 				}
 			}
 		}
